--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "daisyui": "^5.5.11",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
